Current changelog. This will be updated after every big change

* Change: better code for the console colors